manifests/machineconfigcontroller/machineconfigpool-osimagestream-reference-validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "machineconfigpool-osimagestream-reference-validation"
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: machineconfiguration.openshift.io/v1
    kind: OSImageStream
  matchConstraints:
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector: {}
    resourceRules:
    - apiGroups:   ["machineconfiguration.openshift.io"]
      apiVersions: ["v1"]
      operations:  ["CREATE","UPDATE"]
      resources:   ["machineconfigpools"]
      scope: "*"
  validations:
    - expression: "!has(object.spec.osImageStream) || object.spec.osImageStream.name in params.status.availableStreams.map(s, s.name)"
      message: "The specified osImageStream name must reference a valid stream from the cluster OSImageStream resource"
